# sharpy

./: .gitignore  LICENSE  README.md  RUN_BBH_BILBY.py  likelihood.py  mlgw_template.py  noise.py  pyproject.toml  smc.py  smc_functions.py  utils.py
Examples/: 11D_gaussian_mixture.ipynb  GW_injection.py  GW_realdata.py  gaussian_mixture.py
Examples/Gaussian_mixture_example/: evidence.txt  sampling_time.txt
sharpy/: GW_likelihood.py  likelihood.py  noise.py  smc.py  smc_functions.py  test_distributions.py  utils.py  welch.py
